<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/move_activity"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:id="@+id/btn_move_activity"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/move_with_data"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:id="@+id/btn_move_with_data"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dial_number"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:id="@+id/btn_dial"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result_from_activity"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:id="@+id/btn_result"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result_from_activity"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:id="@+id/tv_result"
        android:textSize="24sp"
        android:gravity="center"/>
</LinearLayout>>